$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------
- major overhaul of wireless LAN support: in FreeBSD 8, it is always
  necessary to create subinterfaces (wlanX) attached to the actual
  physical interfaces (e.g. athX). On some cards, it is now also
  possible to create multiple APs at the same time. To reflect this
  change, the wireless settings have moved to the Interfaces: assign
  page, where WLAN subinterfaces can be created much like for VLANs.

  Older configurations are converted automatically.
  
  To do: test with 802.11n, test with multiple radios in the same
  system; figure out a way to detect multi-BSSID capability on radio

- introduce generic-pc-serial image

- stop patching bootloader: it's kind of hopeless to try and reuse
  the BIOS preset serial baudrate; some BIOSes don't even set it,
  and on ALIX it doesn't work properly either. A fixed 9600 baud
  is probably the lesser evil.

- add regdomain.xml (required for proper WLAN support)

- drop uath from kernel - requires firmware download program,
  probably not worth the hassle since it can't do hostap anyway

- add kernel support for 3g modems with u3g 

- fixup go.sh for csh instead of bashisms

- patch sixxs-aiccu port makefile not to use gnutls (it's too big)

- sync up M0N0WALL_GENERIC kernel config with current state of GENERIC
  config in FreeBSD 8.2 (most importantly: add uart driver for serial
  console support)

- move newbuild stuff to build/scripts and put the patches in the
  appropriate subdirs of build/patches

- make go.sh smarter: if it finds that it's been run from within a
  working copy, it will use the current working copy. Otherwise it
  will attempt to install subversion and check out the current repo
  automatically

- remove old kernel patches

- atareinit is not needed anymore

- update ipfstat patch and modify build scripts so that the patch is